--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-plumber": "^1.2.1",
+    "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^5.1.0",
